--- a/index.html
+++ b/index.html
@@ -166,8 +166,16 @@ body[data-logo-shadow="presence"]{ --logo-shadow: var(--logo-shadow-presence); }
 .badge{ display:inline-block; padding:4px 8px; border-radius:999px; font-size:11px; font-weight:900; color:#000; background:linear-gradient(135deg,var(--gold),var(--gold2)); margin-right:6px; }
 .section .text{ color:var(--muted); font-size:13px; line-height:1.55; }
 
-.two-col{ display:grid; gap:14px; align-items:start; }
-@media(min-width:980px){ .two-col{ grid-template-columns: 1fr 1fr; } }
+/* two-col grid items (v13.1 layout v3) */
+.two-col .section{ margin-bottom:0; height:100%; }
+.section-header{ display:flex; align-items:center; justify-content:space-between; gap:10px; margin-bottom:8px; }
+.section-header .title{ margin-bottom:0; }
+.btn-mini{ padding:8px 10px !important; font-size:12px; border-radius:12px; }
+.mini-note{ color:#9a9a9a; font-size:12px; font-weight:800; padding:0 2px; }
+
+
+.two-col{ display:grid; gap:14px; }
+@media(min-width:980px){ .two-col{ grid-template-columns: 1fr 1fr; align-items:stretch; } }
 .col{ min-width:0; }
 
 .insight-row{ display:flex; gap:8px; align-items:center; margin-top:10px; flex-wrap:wrap; }
@@ -422,7 +430,7 @@ select.insight-select{
   box-shadow:0 10px 24px rgba(0,0,0,.35);
 }
 .vendor-section[data-section="verified"] .vsh-chip{
-  color:#00121a;
+  color:#111;
   background:linear-gradient(135deg,#2d7dff,#6bdcff);
 }
 
@@ -500,7 +508,7 @@ select.insight-select{
   background:linear-gradient(135deg,var(--gold),var(--gold2));
 }
 .tag-badge.new{
-  color:#00121a;
+  color:#111;
   background:linear-gradient(135deg,#2d7dff,#6bdcff);
 }
 .tag-badge.ad{
@@ -634,8 +642,8 @@ select.insight-select{
   border-radius:999px;
   font-weight:900;
   text-decoration:none;
-  background:linear-gradient(135deg,#1da1f2,#78d6ff);
-  color:#00121a;
+  background:linear-gradient(135deg,var(--gold),var(--gold2));
+  color:#111;
   box-shadow:0 12px 30px rgba(0,0,0,.45);
 }
 .fab a.secondary{
@@ -1731,23 +1739,28 @@ function appendUtm(urlStr) {
   </div>
 
   <div class="two-col">
-    <div class="col">
-
-<div class="section">
-        <div class="title"><span class="badge">CHECK</span>배팅 전 체크리스트</div>
-        <div class="text" id="checklistText"></div>
-        <button class="insight-btn" type="button" onclick="refreshChecklist()" style="margin-top:10px;">체크리스트 새로고침</button>
-        <div class="text" style="margin-top:8px;color:#9a9a9a;font-size:12px;">
-          ※ 과몰입 방지/리스크 관리용 안내입니다.
-        </div>
-      </div>
-
-<div class="section">
-        <div class="title"><span class="badge">TOOL</span>배당 마진 계산기 (초간단)</div>
+<div class="section" id="oddsAnalyzerSection">
+        <div class="title"><span class="badge">ANALYZE</span>스포츠 배당 분석기</div>
         <div class="text" style="margin-bottom:10px;">
-          배당을 입력하면 <b>북메이커 마진(수수료)</b>을 계산합니다. (참고용)
+          종목/마켓을 고르고 배당을 입력하면 <b>정규화 확률 · 공정배당 · 마진</b>을 정리합니다.
         </div>
 
+
+        <div class="insight-row" style="margin-top:10px; margin-bottom:6px;">
+          <select class="insight-select" id="oddsSport" aria-label="전종목 카테고리 선택">
+            <option value="축구">축구</option>
+            <option value="농구">농구</option>
+            <option value="야구">야구</option>
+            <option value="배구">배구</option>
+            <option value="하키">하키</option>
+            <option value="테니스">테니스</option>
+            <option value="미식축구">미식축구</option>
+            <option value="격투기">격투기</option>
+            <option value="e스포츠">e스포츠</option>
+            <option value="기타">기타</option>
+          </select>
+          <div class="mini-note">전종목 카테고리 선택형</div>
+        </div>
         <div class="seg-row" role="tablist" aria-label="마진 계산기 유형">
           <button class="seg active" type="button" id="mMode2" onclick="setMarginMode('2')">2-way (승/패)</button>
           <button class="seg" type="button" id="mMode3" onclick="setMarginMode('3')">3-way (홈/무/원정)</button>
@@ -1773,85 +1786,6 @@ function appendUtm(urlStr) {
         <div class="text" id="simpleMarginHint" style="color:#bdbdbd;font-size:12px;"></div>
       </div>
 
-      <div class="section" id="riskCalcSection">
-        <div class="title"><span class="badge">RISK</span>리스크 관리 계산기</div>
-        <div class="text" style="margin-bottom:10px;">
-          손실 한도 · 고정 비중 · 보수 켈리로 <b>과몰입을 줄이는</b> 참고 계산기입니다. (결과는 참고용)
-        </div>
-
-        <div class="seg-row" role="tablist" aria-label="리스크 관리 계산기 유형">
-          <button class="seg active" type="button" id="rModeStop" onclick="setRiskMode('stop')">손실 한도</button>
-          <button class="seg" type="button" id="rModeFixed" onclick="setRiskMode('fixed')">고정 비중</button>
-          <button class="seg" type="button" id="rModeKelly" onclick="setRiskMode('kelly')">보수 켈리</button>
-        </div>
-
-        <div id="riskStop" style="display:block; margin-top:10px;">
-          <div class="text" style="margin-bottom:8px;color:#bdbdbd;font-size:12px;">
-            하루/세션 손실 한도를 먼저 정해두면, 감정 베팅을 줄이는데 도움이 됩니다.
-          </div>
-          <div style="display:grid; gap:10px;">
-            <input id="rBankroll1" inputmode="decimal" placeholder="총 자본 (예: 1000000)">
-            <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px;">
-              <input id="rLossPct" inputmode="decimal" placeholder="손실 한도 % (예: 5)">
-              <input id="rStopPct" inputmode="decimal" placeholder="중단 트리거 % (예: 80)">
-            </div>
-          </div>
-          <button class="insight-btn" type="button" onclick="calcRiskStop()" style="margin-top:10px;">손실 한도 계산</button>
-          <div class="text" id="riskStopOut" style="font-weight:900;color:#f5e27a;margin-top:8px;"></div>
-          <div class="text" id="riskStopHint" style="color:#bdbdbd;font-size:12px;"></div>
-        </div>
-
-        <div id="riskFixed" style="display:none; margin-top:10px;">
-          <div class="text" style="margin-bottom:8px;color:#bdbdbd;font-size:12px;">
-            고정 비중은 변동을 줄이는 가장 단순한 룰입니다. (예: 1~2%)
-          </div>
-          <div style="display:grid; gap:10px;">
-            <input id="rBankroll2" inputmode="decimal" placeholder="총 자본 (예: 1000000)">
-            <input id="rStakePct" inputmode="decimal" placeholder="베팅 비중 % (예: 1.5)">
-            <div class="chip-row" aria-label="비중 프리셋">
-              <button class="chip" type="button" onclick="presetStake(0.5)">0.5%</button>
-              <button class="chip" type="button" onclick="presetStake(1)">1%</button>
-              <button class="chip" type="button" onclick="presetStake(1.5)">1.5%</button>
-              <button class="chip" type="button" onclick="presetStake(2)">2%</button>
-              <button class="chip" type="button" onclick="presetStake(3)">3%</button>
-            </div>
-          </div>
-          <button class="insight-btn" type="button" onclick="calcRiskFixed()" style="margin-top:10px;">고정 비중 계산</button>
-          <div class="text" id="riskFixedOut" style="font-weight:900;color:#f5e27a;margin-top:8px;"></div>
-          <div class="text" id="riskFixedHint" style="color:#bdbdbd;font-size:12px;"></div>
-        </div>
-
-        <div id="riskKelly" style="display:none; margin-top:10px;">
-          <div class="text" style="margin-bottom:8px;color:#bdbdbd;font-size:12px;">
-            켈리는 공격적일 수 있어 <b>보수 배수</b>(예: 25%~50%)로 줄여 쓰는 것을 권장합니다.
-          </div>
-          <div style="display:grid; gap:10px;">
-            <input id="rBankroll3" inputmode="decimal" placeholder="총 자본 (예: 1000000)">
-            <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px;">
-              <input id="rOdds" inputmode="decimal" placeholder="배당(Decimal) (예: 1.95)">
-              <input id="rWinPct" inputmode="decimal" placeholder="승률 % 추정 (예: 55)">
-            </div>
-            <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px;">
-              <input id="rKellyFactor" inputmode="decimal" placeholder="보수 배수 % (예: 25)">
-              <input id="rMaxPct" inputmode="decimal" placeholder="최대 상한 % (예: 3)">
-            </div>
-          </div>
-          <button class="insight-btn" type="button" onclick="calcRiskKelly()" style="margin-top:10px;">보수 켈리 계산</button>
-          <div class="text" id="riskKellyOut" style="font-weight:900;color:#f5e27a;margin-top:8px;"></div>
-          <div class="text" id="riskKellyHint" style="color:#bdbdbd;font-size:12px;"></div>
-        </div>
-
-        <div class="text" style="margin-top:10px;color:#9a9a9a;font-size:12px;">
-          ※ 과몰입 방지용 참고 도구입니다. 불확실한 승률 추정/무리한 배팅은 손실로 이어질 수 있습니다.
-        </div>
-      </div>
-
-
-
-    </div>
-
-    <div class="col">
-
 <div class="section">
         <div class="title">오늘의 인사이트</div>
         <div class="text" id="insight"></div>
@@ -1873,15 +1807,102 @@ function appendUtm(urlStr) {
         </div>
       </div>
 
-      <div class="section" id="quickMemoSection">
-        <div class="title"><span class="badge">MEMO</span>오늘의 메모 (로컬 저장)</div>
+<div class="section" id="riskCalcSection">
+    <div class="title"><span class="badge">RISK</span>리스크 관리 계산기</div>
+    <div class="text" style="margin-bottom:10px;">
+     손실 한도 · 고정 비중 · 보수 켈리로 <b>과몰입을 줄이는</b> 참고 계산기입니다. 
+    </div>
+
+    <div class="seg-row" role="tablist" aria-label="리스크 관리 계산기 유형">
+     <button class="seg active" type="button" id="rModeStop" onclick="setRiskMode('stop')">손실 한도</button>
+     <button class="seg" type="button" id="rModeFixed" onclick="setRiskMode('fixed')">고정 비중</button>
+     <button class="seg" type="button" id="rModeKelly" onclick="setRiskMode('kelly')">보수 켈리</button>
+    </div>
+
+    <div id="riskStop" style="display:block; margin-top:10px;">
+     <div class="text" style="margin-bottom:8px;color:#bdbdbd;font-size:12px;">
+      하루/세션 손실 한도를 먼저 정해두면, 감정 베팅을 줄이는데 도움이 됩니다.
+     </div>
+     <div style="display:grid; gap:10px;">
+      <input id="rBankroll1" inputmode="decimal" placeholder="총 자본 (예: 1000000)">
+      <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px;">
+       <input id="rLossPct" inputmode="decimal" placeholder="손실 한도 % (예: 5)">
+       <input id="rStopPct" inputmode="decimal" placeholder="중단 트리거 % (예: 80)">
+      </div>
+     </div>
+     <button class="insight-btn" type="button" onclick="calcRiskStop()" style="margin-top:10px;">손실 한도 계산</button>
+     <div class="text" id="riskStopOut" style="font-weight:900;color:#f5e27a;margin-top:8px;"></div>
+     <div class="text" id="riskStopHint" style="color:#bdbdbd;font-size:12px;"></div>
+    </div>
+
+    <div id="riskFixed" style="display:none; margin-top:10px;">
+     <div class="text" style="margin-bottom:8px;color:#bdbdbd;font-size:12px;">
+      고정 비중은 변동을 줄이는 가장 단순한 룰입니다. (예: 1~2%)
+     </div>
+     <div style="display:grid; gap:10px;">
+      <input id="rBankroll2" inputmode="decimal" placeholder="총 자본 (예: 1000000)">
+      <input id="rStakePct" inputmode="decimal" placeholder="베팅 비중 % (예: 1.5)">
+      <div class="chip-row" aria-label="비중 프리셋">
+       <button class="chip" type="button" onclick="presetStake(0.5)">0.5%</button>
+       <button class="chip" type="button" onclick="presetStake(1)">1%</button>
+       <button class="chip" type="button" onclick="presetStake(1.5)">1.5%</button>
+       <button class="chip" type="button" onclick="presetStake(2)">2%</button>
+       <button class="chip" type="button" onclick="presetStake(3)">3%</button>
+      </div>
+     </div>
+     <button class="insight-btn" type="button" onclick="calcRiskFixed()" style="margin-top:10px;">고정 비중 계산</button>
+     <div class="text" id="riskFixedOut" style="font-weight:900;color:#f5e27a;margin-top:8px;"></div>
+     <div class="text" id="riskFixedHint" style="color:#bdbdbd;font-size:12px;"></div>
+    </div>
+
+    <div id="riskKelly" style="display:none; margin-top:10px;">
+     <div class="text" style="margin-bottom:8px;color:#bdbdbd;font-size:12px;">
+      켈리는 공격적일 수 있어 <b>보수 배수</b>(예: 25%~50%)로 줄여 쓰는 것을 권장합니다.
+     </div>
+     <div style="display:grid; gap:10px;">
+      <input id="rBankroll3" inputmode="decimal" placeholder="총 자본 (예: 1000000)">
+      <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px;">
+       <input id="rOdds" inputmode="decimal" placeholder="배당(Decimal) (예: 1.95)">
+       <input id="rWinPct" inputmode="decimal" placeholder="승률 % 추정 (예: 55)">
+      </div>
+      <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px;">
+       <input id="rKellyFactor" inputmode="decimal" placeholder="보수 배수 % (예: 25)">
+       <input id="rMaxPct" inputmode="decimal" placeholder="최대 상한 % (예: 3)">
+      </div>
+     </div>
+     <button class="insight-btn" type="button" onclick="calcRiskKelly()" style="margin-top:10px;">보수 켈리 계산</button>
+     <div class="text" id="riskKellyOut" style="font-weight:900;color:#f5e27a;margin-top:8px;"></div>
+     <div class="text" id="riskKellyHint" style="color:#bdbdbd;font-size:12px;"></div>
+    </div>
+
+    <div class="text" style="margin-top:10px;color:#9a9a9a;font-size:12px;">
+     ※ 과몰입 방지용 참고 도구입니다. 불확실한 승률 추정/무리한 배팅은 손실로 이어질 수 있습니다.
+    </div>
+   </div>
+
+<div class="section" id="quickMemoSection">
+        <div class="title"><span class="badge">MEMO</span>오늘의 메모</div>
         <div class="text">
-          간단히 기록해두면 다음 방문 때 그대로 남습니다. (브라우저 <b>로컬 저장</b> / 서버 전송 없음)
+          간단히 기록해두면 다음 방문 때 그대로 남습니다.
         </div>
         <textarea class="memo-area" id="quickMemoText" rows="5" placeholder="예) 오늘 체크 포인트 / 라인 변동 / 문의 내용 메모"></textarea>
         <div class="memo-actions">
           <button class="insight-btn" type="button" id="quickMemoSave">저장</button>
           <button class="insight-btn secondary" type="button" id="quickMemoClear">비우기</button>
+        </div>
+      </div>
+
+<div class="section" id="checklistSection">
+        
+        <div class="section-header">
+          <div class="title"><span class="badge">CHECK</span>배팅 전 체크리스트</div>
+          <button class="insight-btn secondary btn-mini" type="button" onclick="refreshChecklist()">새로고침</button>
+        </div>
+
+        <div class="text" id="checklistText"></div>
+        
+        <div class="text" style="margin-top:8px;color:#9a9a9a;font-size:12px;">
+          ※ 과몰입 방지/리스크 관리용 안내입니다.
         </div>
       </div>
 
@@ -1908,9 +1929,7 @@ function appendUtm(urlStr) {
           <div class="a">대부분 업체는 <b>가입 시 최초 1회</b>만 입력 가능하며, 미입력/삭제 시 혜택 적용이 어려울 수 있습니다.</div>
         </details>
       </div>
-
-    </div>
-  </div>
+</div>
 <div class="section" id="bonusChecklistSection">
     <div class="title"><span class="badge">NEW</span>입플 체크리스트</div>
     <div class="text">
@@ -2165,7 +2184,7 @@ function appendUtm(urlStr) {
 </script>
 
 <div class="fab" aria-label="빠른 이동">
-  <a href="/analysis/" data-cta="fab_analysis">분석기</a>
+  <a class="primary" href="/analysis/" data-cta="fab_analysis">분석기</a>
   <a class="secondary" href="#vendorTop" data-cta="fab_vendors">놀이터</a>
 </div>
 
@@ -2399,37 +2418,58 @@ function toNum(v) {
 function calcSimpleMargin() {
   const out = document.getElementById("simpleMarginResult");
   const hint = document.getElementById("simpleMarginHint");
-  if(!out||!hint) return;
+  if(!out || !hint) return;
+
+  const sportEl = document.getElementById("oddsSport");
+  const sport = sportEl ? String(sportEl.value || "").trim() : "";
+  const prefix = sport ? (sport + " · ") : "";
+
+  const setErr = (msg)=>{
+    out.innerText = msg;
+    hint.innerText = "";
+  };
 
   if(marginMode==="2") {
-    const a=toNum(document.getElementById("m2A").value);
-    const b=toNum(document.getElementById("m2B").value);
-    if([a,b].some(x=>!Number.isFinite(x)||x<=1)) {
-      out.innerText="배당 2개를 정확히 입력해 주세요. (1.01 이상)";
-      hint.innerText="";
-      return;
-    }
-    const imp = (1/a)+(1/b);
-    const margin = (imp-1)*100;
-    const fair = 1/imp;
-    const pA=(1/a)*fair*100, pB=(1/b)*fair*100;
-    out.innerText=`마진(수수료) : ${margin.toFixed(2)}%`;
-    hint.innerHTML=`정규화 확률(참고): 승 ${pA.toFixed(1)}% / 패 ${pB.toFixed(1)}%<br>마진이 낮을수록 유리`;
+    const a = toNum(document.getElementById("m2A").value);
+    const b = toNum(document.getElementById("m2B").value);
+    if([a,b].some(x=>!Number.isFinite(x)||x<=1)) return setErr("배당 2개를 정확히 입력해 주세요. (1.01 이상)");
+
+    const imp = (1/a) + (1/b);
+    const over = imp * 100;
+    const margin = (imp - 1) * 100;
+
+    const pA = ((1/a) / imp) * 100;
+    const pB = ((1/b) / imp) * 100;
+    const fairA = 100 / pA;
+    const fairB = 100 / pB;
+
+    out.innerText = `${prefix}마진(수수료) : ${margin.toFixed(2)}%`;
+    hint.innerHTML =
+      `정규화 확률: 승 ${pA.toFixed(1)}% / 패 ${pB.toFixed(1)}%<br>` +
+      `공정 배당(정규화): 승 ${fairA.toFixed(2)} / 패 ${fairB.toFixed(2)}<br>` +
+      `오버라운드: ${over.toFixed(2)}% (100% 초과분 = 마진)`;
   } else {
-    const h=toNum(document.getElementById("m3H").value);
-    const d=toNum(document.getElementById("m3D").value);
-    const a=toNum(document.getElementById("m3A").value);
-    if([h,d,a].some(x=>!Number.isFinite(x)||x<=1)) {
-      out.innerText="배당 3개를 정확히 입력해 주세요. (1.01 이상)";
-      hint.innerText="";
-      return;
-    }
-    const imp=(1/h)+(1/d)+(1/a);
-    const margin=(imp-1)*100;
-    const fair=1/imp;
-    const pH=(1/h)*fair*100, pD=(1/d)*fair*100, pA=(1/a)*fair*100;
-    out.innerText=`마진(수수료) : ${margin.toFixed(2)}%`;
-    hint.innerHTML=`정규화 확률(참고): 홈 ${pH.toFixed(1)}% / 무 ${pD.toFixed(1)}% / 원정 ${pA.toFixed(1)}%<br>마진이 낮을수록 유리`;
+    const h = toNum(document.getElementById("m3H").value);
+    const d = toNum(document.getElementById("m3D").value);
+    const a = toNum(document.getElementById("m3A").value);
+    if([h,d,a].some(x=>!Number.isFinite(x)||x<=1)) return setErr("배당 3개를 정확히 입력해 주세요. (1.01 이상)");
+
+    const imp = (1/h) + (1/d) + (1/a);
+    const over = imp * 100;
+    const margin = (imp - 1) * 100;
+
+    const pH = ((1/h) / imp) * 100;
+    const pD = ((1/d) / imp) * 100;
+    const pA = ((1/a) / imp) * 100;
+    const fairH = 100 / pH;
+    const fairD = 100 / pD;
+    const fairA = 100 / pA;
+
+    out.innerText = `${prefix}마진(수수료) : ${margin.toFixed(2)}%`;
+    hint.innerHTML =
+      `정규화 확률: 홈 ${pH.toFixed(1)}% / 무 ${pD.toFixed(1)}% / 원정 ${pA.toFixed(1)}%<br>` +
+      `공정 배당(정규화): 홈 ${fairH.toFixed(2)} / 무 ${fairD.toFixed(2)} / 원정 ${fairA.toFixed(2)}<br>` +
+      `오버라운드: ${over.toFixed(2)}% (100% 초과분 = 마진)`;
   }
 }
 
