--- a/index.html
+++ b/index.html
@@ -1489,6 +1489,129 @@ body::after{
   line-height:1.45;
   font-size:13px;
 }
+
+/* === Odds one-line summary card (margin / fair odds / normalized probs) === */
+.odds-summary-card{
+  margin-top:12px;
+  padding:14px 14px 12px;
+  border-radius:18px;
+  border:1px solid rgba(255,255,255,.09);
+  background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.025));
+  box-shadow: 0 14px 40px rgba(0,0,0,.35);
+}
+.odds-summary-row{
+  display:grid;
+  grid-template-columns: 1.05fr 1fr 1fr;
+  gap:14px;
+  align-items:stretch;
+}
+@media (max-width: 920px){
+  .odds-summary-row{ grid-template-columns: 1fr; }
+}
+.odds-metric{
+  padding:10px 10px 8px;
+  border-radius:14px;
+  border:1px solid rgba(255,255,255,.07);
+  background: rgba(0,0,0,.14);
+}
+.odds-metric-title{
+  font-size:12px;
+  color:#bdbdbd;
+  letter-spacing:.2px;
+  font-weight:800;
+}
+.odds-metric-value{
+  margin-top:6px;
+  font-size:30px;
+  line-height:1.1;
+  font-weight:950;
+  color:#f5e27a;
+  text-shadow: 0 6px 20px rgba(245,226,122,.12);
+}
+.odds-metric-sub{
+  margin-top:6px;
+  font-size:12px;
+  color:#9a9a9a;
+}
+.odds-pills{
+  display:flex;
+  flex-wrap:wrap;
+  gap:8px;
+  margin-top:8px;
+}
+.odds-pill{
+  display:inline-flex;
+  align-items:center;
+  gap:6px;
+  padding:7px 10px;
+  border-radius:999px;
+  border:1px solid rgba(255,255,255,.11);
+  background: rgba(255,255,255,.04);
+  font-size:13px;
+  font-weight:900;
+  color:#eaeaea;
+}
+.odds-pill .k{ color:#bdbdbd; font-weight:800; }
+.odds-pill.home{ border-color: rgba(245,226,122,.35); }
+.odds-pill.draw{ border-color: rgba(255,255,255,.14); }
+.odds-pill.away{ border-color: rgba(140,200,255,.22); }
+
+.odds-summary-note{
+  margin-top:8px;
+  font-size:12px;
+  color:#9a9a9a;
+  line-height:1.35;
+}
+
+/* === Insight/Memo premium tabs === */
+.im-header{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  gap:10px;
+}
+.im-tabs{
+  display:flex;
+  gap:6px;
+  padding:4px;
+  border-radius:999px;
+  border:1px solid rgba(255,255,255,.10);
+  background: rgba(0,0,0,.16);
+}
+.im-tab{
+  appearance:none;
+  border:0;
+  cursor:pointer;
+  padding:8px 12px;
+  border-radius:999px;
+  font-weight:900;
+  font-size:12px;
+  color:#bdbdbd;
+  background: transparent;
+  transition: transform .12s ease, background .12s ease, color .12s ease;
+}
+.im-tab:hover{ transform: translateY(-1px); }
+.im-tab.active{
+  color:#121212;
+  background: linear-gradient(180deg, rgba(245,226,122,.96), rgba(245,226,122,.72));
+  box-shadow: 0 12px 26px rgba(245,226,122,.10);
+}
+.im-panels{
+  margin-top:10px;
+  min-height: 250px;
+}
+.im-panel{ display:none; }
+.im-panel.active{
+  display:flex;
+  flex-direction:column;
+  gap:10px;
+}
+.im-panel .memo-area{ min-height: 150px; }
+.im-note{
+  margin-top:2px;
+  color:#9a9a9a;
+  font-size:12px;
+}
 </style>
 <script>
 /* ===== 카드 데이터 (card9 추가) ===== */
@@ -1785,29 +1908,73 @@ function appendUtm(urlStr) {
 </div>
 </div>
 <button class="insight-btn" onclick="calcSimpleMargin()" style="margin-top:10px;" type="button">분석 실행</button>
-<div class="text" id="simpleMarginResult" style="font-weight:900;color:#f5e27a;margin-top:8px;"></div>
-<div class="text" id="simpleMarginHint" style="color:#bdbdbd;font-size:12px;"></div>
-</div><div class="section">
-<div class="section-header"><div class="title"><span class="badge">TODAY</span>오늘의 인사이트 · 메모</div></div>
-<div class="text" id="insight"></div>
-<div class="insight-row">
-<select aria-label="종목 선택" class="insight-select" id="insightSport">
-<option value="축구">축구</option>
-<option value="농구">농구</option>
-<option value="야구">야구</option>
-<option value="배구">배구</option>
-<option value="e스포츠">e스포츠</option>
-<option value="하키">하키</option>
-</select>
-<button class="insight-btn" onclick="refreshInsight()" type="button">인사이트 새로고침</button>
+<div class="odds-summary-card" id="oddsSummaryCard" aria-live="polite">
+  <div class="odds-summary-row">
+    <div class="odds-metric">
+      <div class="odds-metric-title">마진 (오버라운드)</div>
+      <div class="odds-metric-value" id="oddsMarginValue">—</div>
+      <div class="odds-metric-sub" id="oddsOverroundSub">오버라운드 —</div>
+    </div>
+    <div class="odds-metric">
+      <div class="odds-metric-title">공정 배당</div>
+      <div class="odds-pills" id="oddsFairPills"></div>
+      <div class="odds-metric-sub">정규화 기준</div>
+    </div>
+    <div class="odds-metric">
+      <div class="odds-metric-title">정규화 확률</div>
+      <div class="odds-pills" id="oddsProbPills"></div>
+      <div class="odds-metric-sub">합 100%</div>
+    </div>
+  </div>
 </div>
-<div class="text" style="margin-top:8px;color:#9a9a9a;font-size:12px;">
-          ※ 종목 선택은 참고용이며, 실제 결과를 보장하지 않습니다.
-        </div>
-<div class="section-divider"></div><div class="combo-memo"><div class="combo-subtitle">오늘의 메모</div><div class="text">간단히 기록해두면 다음 방문 때 그대로 남습니다.</div><textarea class="memo-area" id="quickMemoText" placeholder="예) 오늘 체크 포인트 / 라인 변동 / 문의 내용 메모" rows="5"></textarea><div class="memo-actions">
-<button class="insight-btn" id="quickMemoSave" type="button">저장</button>
-<button class="insight-btn secondary" id="quickMemoClear" type="button">비우기</button>
-</div></div></div><div class="section" id="riskCalcSection">
+<div class="odds-summary-note" id="oddsSummaryNote"></div>
+<div class="text" id="simpleMarginResult" style="display:none;"></div>
+<div class="text" id="simpleMarginHint" style="display:none;"></div>
+</div><div class="section" id="insightMemoSection">
+  <div class="section-header im-header">
+    <div class="title"><span class="badge">TODAY</span>인사이트 · 메모</div>
+    <div class="im-tabs" role="tablist" aria-label="인사이트/메모">
+      <button class="im-tab active" type="button" data-imtab="insight" aria-selected="true">인사이트</button>
+      <button class="im-tab" type="button" data-imtab="memo" aria-selected="false" tabindex="-1">메모</button>
+    </div>
+  </div>
+
+  <div class="im-panels">
+    <div class="im-panel active" data-impanel="insight">
+      <div class="text" id="insight"></div>
+
+      <div class="insight-row">
+        <select aria-label="종목 선택" class="insight-select" id="insightSport">
+          <option value="축구">축구</option>
+          <option value="농구">농구</option>
+          <option value="야구">야구</option>
+          <option value="배구">배구</option>
+          <option value="e스포츠">e스포츠</option>
+          <option value="하키">하키</option>
+        </select>
+        <button class="insight-btn" onclick="refreshInsight()" type="button">인사이트 새로고침</button>
+      </div>
+
+      <div class="text im-note">
+        ※ 종목 선택은 참고용이며, 실제 결과를 보장하지 않습니다.
+      </div>
+    </div>
+
+    <div class="im-panel" data-impanel="memo" hidden>
+      <div class="combo-subtitle">오늘의 메모</div>
+      <div class="text">간단히 기록해두면 다음 방문 때 그대로 남습니다.</div>
+
+      <textarea class="memo-area" id="quickMemoText" placeholder="예) 오늘 체크 포인트 / 라인 변동 / 문의 내용 메모" rows="6"></textarea>
+
+      <div class="memo-actions">
+        <button class="insight-btn" id="quickMemoSave" type="button">저장</button>
+        <button class="insight-btn secondary" id="quickMemoClear" type="button">비우기</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="section" id="riskCalcSection">
 <div class="title"><span class="badge">RISK</span>리스크 관리 계산기</div>
 <div class="text" style="margin-bottom:10px;">
      손실 한도 · 고정 비중 · 보수 켈리로 <b>과몰입을 줄이는</b> 참고 계산기입니다. 
@@ -2454,18 +2621,45 @@ function toNum(v) {
   return Number.isFinite(n) ? n : NaN;
 }
 function calcSimpleMargin() {
+  const card = document.getElementById("oddsSummaryCard");
+  const mVal = document.getElementById("oddsMarginValue");
+  const mSub = document.getElementById("oddsOverroundSub");
+  const fairPills = document.getElementById("oddsFairPills");
+  const probPills = document.getElementById("oddsProbPills");
+  const note = document.getElementById("oddsSummaryNote");
+
+  // legacy (hidden) nodes - keep for backward compatibility
   const out = document.getElementById("simpleMarginResult");
   const hint = document.getElementById("simpleMarginHint");
-  if(!out || !hint) return;
 
   const sportEl = document.getElementById("oddsSport");
   const sport = sportEl ? String(sportEl.value || "").trim() : "";
-  const prefix = sport ? (sport + " · ") : "";
+  const modeLabel = (marginMode==="2") ? "2-way" : "3-way";
 
   const setErr = (msg)=>{
-    out.innerText = msg;
-    hint.innerText = "";
+    if(card && mVal){
+      mVal.textContent = msg;
+      if(mSub) mSub.textContent = "";
+      if(fairPills) fairPills.innerHTML = "";
+      if(probPills) probPills.innerHTML = "";
+      if(note) note.textContent = "";
+    }
+    if(out) out.textContent = msg;
+    if(hint) hint.textContent = "";
   };
+
+  const makePills = (container, items, fmt)=>{
+    if(!container) return;
+    container.innerHTML = "";
+    items.forEach(it=>{
+      const s = document.createElement("span");
+      s.className = "odds-pill " + (it.cls || "");
+      s.innerHTML = `<span class="k">${it.k}</span> <span class="v">${fmt(it.v)}</span>`;
+      container.appendChild(s);
+    });
+  };
+
+  const prefix = sport ? (sport + " · ") : "";
 
   if(marginMode==="2") {
     const a = toNum(document.getElementById("m2A").value);
@@ -2481,11 +2675,27 @@ function calcSimpleMargin() {
     const fairA = 100 / pA;
     const fairB = 100 / pB;
 
-    out.innerText = `${prefix}마진(수수료) : ${margin.toFixed(2)}%`;
-    hint.innerHTML =
+    if(mVal) mVal.textContent = `${margin>=0?"+":""}${margin.toFixed(2)}%`;
+    if(mSub) mSub.textContent = `오버라운드 ${over.toFixed(2)}%`;
+
+    makePills(fairPills, [
+      {k:"홈", v: fairA, cls:"home"},
+      {k:"원정", v: fairB, cls:"away"},
+    ], (v)=>Number(v).toFixed(2));
+
+    makePills(probPills, [
+      {k:"홈", v: pA, cls:"home"},
+      {k:"원정", v: pB, cls:"away"},
+    ], (v)=>Number(v).toFixed(1) + "%");
+
+    if(note) note.textContent = `${prefix}${modeLabel} 입력 배당에서 오버라운드를 제거해 공정 배당 · 정규화 확률을 계산합니다.`;
+
+    if(out) out.textContent = `${prefix}마진 : ${margin.toFixed(2)}%`;
+    if(hint) hint.innerHTML =
       `정규화 확률: 홈 ${pA.toFixed(1)}% / 원정 ${pB.toFixed(1)}%<br>` +
       `공정 배당(정규화): 홈 ${fairA.toFixed(2)} / 원정 ${fairB.toFixed(2)}<br>` +
       `오버라운드: ${over.toFixed(2)}% (100% 초과분 = 마진)`;
+
   } else {
     const h = toNum(document.getElementById("m3H").value);
     const d = toNum(document.getElementById("m3D").value);
@@ -2503,13 +2713,30 @@ function calcSimpleMargin() {
     const fairD = 100 / pD;
     const fairA = 100 / pA;
 
-    out.innerText = `${prefix}마진(수수료) : ${margin.toFixed(2)}%`;
-    hint.innerHTML =
+    if(mVal) mVal.textContent = `${margin>=0?"+":""}${margin.toFixed(2)}%`;
+    if(mSub) mSub.textContent = `오버라운드 ${over.toFixed(2)}%`;
+
+    makePills(fairPills, [
+      {k:"홈", v: fairH, cls:"home"},
+      {k:"무", v: fairD, cls:"draw"},
+      {k:"원정", v: fairA, cls:"away"},
+    ], (v)=>Number(v).toFixed(2));
+
+    makePills(probPills, [
+      {k:"홈", v: pH, cls:"home"},
+      {k:"무", v: pD, cls:"draw"},
+      {k:"원정", v: pA, cls:"away"},
+    ], (v)=>Number(v).toFixed(1) + "%");
+
+    if(note) note.textContent = `${prefix}${modeLabel} 입력 배당에서 오버라운드를 제거해 공정 배당 · 정규화 확률을 계산합니다.`;
+
+    if(out) out.textContent = `${prefix}마진 : ${margin.toFixed(2)}%`;
+    if(hint) hint.innerHTML =
       `정규화 확률: 홈 ${pH.toFixed(1)}% / 무 ${pD.toFixed(1)}% / 원정 ${pA.toFixed(1)}%<br>` +
       `공정 배당(정규화): 홈 ${fairH.toFixed(2)} / 무 ${fairD.toFixed(2)} / 원정 ${fairA.toFixed(2)}<br>` +
       `오버라운드: ${over.toFixed(2)}% (100% 초과분 = 마진)`;
   }
-}
+}}
 
 /* ===== 카드 메타(필터/정렬용) ===== */
 (function enrichCards() {
@@ -3812,6 +4039,75 @@ document.addEventListener("DOMContentLoaded", ()=>{
   const rKellyFactor = document.getElementById("rKellyFactor"); if(rKellyFactor && !rKellyFactor.value) rKellyFactor.value = "25";
   const rMaxPct = document.getElementById("rMaxPct"); if(rMaxPct && !rMaxPct.value) rMaxPct.value = "3";
 });
+
+
+/* === Insight/Memo Tabs + Quick Memo persistence === */
+(function initInsightMemoTabs(){
+  const sec = document.getElementById("insightMemoSection");
+  if(!sec) return;
+
+  const tabs = Array.from(sec.querySelectorAll(".im-tab[data-imtab]"));
+  const panels = Array.from(sec.querySelectorAll(".im-panel[data-impanel]"));
+  if(!tabs.length || !panels.length) return;
+
+  const KEY = "insightMemoTab";
+
+  function setTab(name){
+    tabs.forEach(btn=>{
+      const active = btn.dataset.imtab === name;
+      btn.classList.toggle("active", active);
+      btn.setAttribute("aria-selected", active ? "true" : "false");
+      btn.tabIndex = active ? 0 : -1;
+    });
+    panels.forEach(p=>{
+      const active = p.dataset.impanel === name;
+      p.classList.toggle("active", active);
+      p.hidden = !active;
+    });
+    try{ localStorage.setItem(KEY, name); }catch(e){}
+  }
+
+  let saved = null;
+  try{ saved = localStorage.getItem(KEY); }catch(e){}
+  const valid = saved && panels.some(p=>p.dataset.impanel === saved);
+  setTab(valid ? saved : "insight");
+
+  tabs.forEach(btn=>{
+    btn.addEventListener("click", ()=> setTab(btn.dataset.imtab));
+    btn.addEventListener("keydown", (e)=>{
+      if(e.key !== "ArrowLeft" && e.key !== "ArrowRight") return;
+      e.preventDefault();
+      const i = tabs.indexOf(document.activeElement);
+      if(i < 0) return;
+      const ni = (e.key === "ArrowRight") ? (i+1) % tabs.length : (i-1+tabs.length) % tabs.length;
+      tabs[ni].focus();
+    });
+  });
+})();
+
+(function initQuickMemo(){
+  const ta = document.getElementById("quickMemoText");
+  const save = document.getElementById("quickMemoSave");
+  const clear = document.getElementById("quickMemoClear");
+  if(!ta || !save || !clear) return;
+
+  const KEY = "quickMemoText";
+  try{
+    const v = localStorage.getItem(KEY);
+    if(v != null) ta.value = v;
+  }catch(e){}
+
+  save.addEventListener("click", ()=>{
+    try{ localStorage.setItem(KEY, ta.value || ""); }catch(e){}
+    if(typeof toast === "function") toast("메모 저장됨");
+  });
+
+  clear.addEventListener("click", ()=>{
+    ta.value = "";
+    try{ localStorage.removeItem(KEY); }catch(e){}
+    if(typeof toast === "function") toast("메모 비움");
+  });
+})();
 </script>
 </div></body>
 </html>
