--- a/index.html
+++ b/index.html
@@ -1872,13 +1872,13 @@ function appendUtm(urlStr) {
 </div>
 </div><div class="section" id="checklistSection">
 <div class="section-header">
-<div class="title"><span class="badge">CHECK</span>배팅 전 체크리스트</div>
+<div class="title"><span class="badge">CHECK</span>오늘의 배팅 전 체크리스트</div>
 <button class="insight-btn secondary btn-mini" onclick="refreshChecklist()" type="button">새로고침</button>
 </div>
 <div class="text" id="checklistText"></div>
 <div class="session-plan" id="sessionPlanBox">
   <div class="session-plan-head">
-    <div class="session-plan-title">오늘의 세션 플랜 <span class="session-plan-sub">(과몰입 방지)</span></div>
+    <div class="session-plan-title">오늘의 세션 플랜 <span class="session-plan-sub"> </span></div>
     <div class="session-plan-actions">
       <button class="insight-btn secondary btn-mini" type="button" id="spSaveBtn">저장</button>
       <button class="insight-btn secondary btn-mini" type="button" id="spClearBtn">초기화</button>
@@ -1886,7 +1886,7 @@ function appendUtm(urlStr) {
   </div>
 
   <div class="text" style="color:#bdbdbd;font-size:12px; margin-top:6px;">
-    오늘의 손실 한도/1회 상한/최대 경기 수를 미리 고정해두면 “추격 배팅”을 줄이는 데 도움이 됩니다. (브라우저에만 저장)
+    오늘의 손실 한도/1회 상한/최대 경기 수를 미리 고정해두면 “추격 배팅”을 줄이는 데 도움이 됩니다. 
   </div>
 
   <div class="session-plan-grid">
@@ -1912,14 +1912,13 @@ function appendUtm(urlStr) {
 </div>
 
 <div class="text" style="margin-top:8px;color:#9a9a9a;font-size:12px;">
-          ※ 과몰입 방지/리스크 관리용 안내입니다.
+         
         </div>
 </div></div>
 <div class="section" id="bonusChecklistSection">
 <div class="title"><span class="badge">NEW</span>입플 체크리스트</div>
 <div class="text">
       입플사이트 혜택을 보기 전에, <b>카지노 입플·슬롯 입플 조건</b>(롤링/제외게임/최대지급)을 빠르게 점검하세요.
-      애매한 조건은 “문의 템플릿 복사”로 한 번에 정리할 수 있습니다.
     </div>
 <div aria-label="입플 체크리스트 바로가기" class="tool-card-grid">
 <a aria-label="입플 체크리스트 열기" class="tool-card-link" data-cta="home_bonus_card" href="/bonus-checklist/">
@@ -1944,7 +1943,7 @@ function appendUtm(urlStr) {
 </div>
 <div class="tool-card-foot">
 <span class="tool-card-cta">체크리스트 열기 →</span>
-<span class="tool-card-note">조건 정리·문의 템플릿 포함</span>
+<span class="tool-card-note"> </span>
 </div>
 </a>
 </div>
