--- a/tool-margin/index.html
+++ b/tool-margin/index.html
@@ -111,38 +111,111 @@ footer{ margin-top:16px; color:rgba(255,255,255,.50); font-size:12px; line-heigh
   .logoImg, .logo-img{ width:min(150px,72vw) !important; padding:9px; }
 }
 
-
-
-/* ===== 88 logo: shadow preset(2단계) + subtle animation ===== */
-:root{
-  --logo-shadow-min: drop-shadow(0 10px 22px rgba(0,0,0,.35)) drop-shadow(0 0 14px rgba(63,183,255,.10));
-  --logo-shadow-presence: drop-shadow(0 14px 34px rgba(0,0,0,.55)) drop-shadow(0 0 26px rgba(63,183,255,.18));
-  --logo-shadow: var(--logo-shadow-min);
-  --logo-shadow-boost: var(--logo-shadow-presence);
-}
-body[data-logo-shadow="presence"]{ --logo-shadow: var(--logo-shadow-presence); }
-
-@keyframes logoFloat{ 0%,100%{ transform:translateY(0) scale(1); } 50%{ transform:translateY(-4px) scale(1.012); } }
-@keyframes logoGlow{ 0%,100%{ filter: var(--logo-shadow); } 50%{ filter: var(--logo-shadow-boost); } }
-
-.header .logoImg,
-.header .logo-img,
-.logoImg,
-.logo-img{
-  background:transparent !important;
-  border:0 !important;
-  box-shadow:none !important;
-  padding:0 !important;
-  border-radius:0 !important;
-  filter: var(--logo-shadow) !important;
-  will-change: transform, filter;
-  transform-origin: 50% 50%;
-  animation: logoFloat 6.8s ease-in-out infinite, logoGlow 3.6s ease-in-out infinite;
-}
-
 </style>
 <script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "오버라운드(마진)가 몇 %면 높은 편인가요?", "acceptedAnswer": {"@type": "Answer", "text": "종목/리그/시장에 따라 다르지만, 일반적으로 마진이 낮을수록 유리합니다. 같은 조건이면 2~4%대가 6~10%대보다 장기 기대값이 좋습니다."}}, {"@type": "Question", "name": "공정확률/공정배당은 무엇인가요?", "acceptedAnswer": {"@type": "Answer", "text": "암시확률을 100%로 정규화해 마진을 제거한 값입니다. ‘마진이 없는 시장’이라고 가정한 공정 기준으로 비교할 때 사용합니다."}}, {"@type": "Question", "name": "2-way와 3-way는 언제 쓰나요?", "acceptedAnswer": {"@type": "Answer", "text": "승/패만 있는 시장은 2-way, 승/무/패가 있는 시장은 3-way로 계산합니다."}}, {"@type": "Question", "name": "마진이 낮으면 무조건 좋은 배팅인가요?", "acceptedAnswer": {"@type": "Answer", "text": "아닙니다. 마진은 ‘수수료’에 가깝고, 실제 수익 여부는 추정 승률(엣지)과 배당의 균형(EV)에 달려 있습니다."}}, {"@type": "Question", "name": "이 계산기는 정답인가요?", "acceptedAnswer": {"@type": "Answer", "text": "계산 자체는 산술이지만, 실제 결과는 변동성이 큽니다. 참고용으로만 활용해 주세요."}}]}</script>
 <script src="../assets/theme-preset.js" defer></script>
+
+<style id="v13_1_theme_override">
+/* === v13.1 look unify (from main index) === */
+:root{
+  /* unify accent (blue) */
+  --accent1:#5fb2ff !important;
+  --accent2:#a8dcff !important;
+  --accentRGB:95,178,255 !important;  /* for rgba(var(--accentRGB), .xx) */
+  --accentText:#00121a !important;
+  --accentOn:#00121a !important;
+
+  /* unify tokens */
+  --bg:#05060b !important;
+  --panel:rgba(12,14,22,.62) !important;
+  --glassA:.72 !important;
+  --glassStrongA:.86 !important;
+  --glassSoftA:.18 !important;
+  --glassBorder:rgba(255,255,255,.10) !important;
+
+  /* backward compat */
+  --gold: var(--accent1) !important;
+  --gold2: var(--accent2) !important;
+}
+
+/* premium midnight background */
+body{
+  background:
+    radial-gradient(1200px 620px at 50% -10%, rgba(var(--accentRGB),.18), transparent 58%),
+    radial-gradient(900px 540px at 15% 25%, rgba(120,170,255,.10), transparent 55%),
+    radial-gradient(900px 640px at 85% 35%, rgba(80,140,255,.08), transparent 55%),
+    linear-gradient(180deg, #05060b 0%, #060612 60%, #040408 100%) !important;
+  color:#fff;
+  font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
+}
+
+/* remove small label badges (TODAY/MAIN/NEW...) */
+.title .badge,
+.section-title .badge,
+h1 .badge,
+h2 .badge,
+h3 .badge{ display:none !important; }
+
+/* panel unification (safe selectors) */
+.section, .panel, .box, .card, .wrap, .container, .hero, header{
+  backdrop-filter: blur(16px);
+  -webkit-backdrop-filter: blur(16px);
+}
+
+/* inputs */
+input, select, textarea{
+  background: rgba(0,0,0,.28) !important;
+  border:1px solid rgba(255,255,255,.14) !important;
+  color:#fff !important;
+  border-radius:14px !important;
+  outline:none;
+}
+input:focus, select:focus, textarea:focus{
+  border-color: rgba(var(--accentRGB), .38) !important;
+  box-shadow: 0 0 0 3px rgba(var(--accentRGB), .12) !important;
+}
+
+/* buttons: less-blue, premium glass */
+.btn, button, a.btn{
+  background: rgba(255,255,255,.06) !important;
+  border:1px solid rgba(255,255,255,.14) !important;
+  color: rgba(255,255,255,.92) !important;
+  box-shadow: 0 12px 34px rgba(0,0,0,.38) !important;
+}
+.btn:hover, button:hover, a.btn:hover{ filter: brightness(1.06); }
+.btn.primary, .btn.go{
+  border-color: rgba(var(--accentRGB), .22) !important;
+  background: rgba(255,255,255,.08) !important;
+}
+.btn.secondary, .btn.ghost{
+  background: rgba(0,0,0,.18) !important;
+}
+
+/* links */
+a{ color:inherit; }
+</style>
+
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "홈",
+      "item": "https://88st.cloud/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "배당 마진 계산기",
+      "item": "https://88st.cloud/tool-margin/"
+    }
+  ]
+}
+</script>
 </head>
 <body>
   <div class="wrap">
@@ -291,22 +364,28 @@ sync(); calc();
       <div class="small">책임감 있게 이용해 주세요. 과몰입 방지/리스크 관리가 우선입니다.</div>
     </footer>
   </div>
-
-
-<script>
-/* logo shadow preset: minimal(default) / presence */
-(function(){
-  try{
-    const qs = new URLSearchParams(location.search);
-    const fromQS = qs.get("logoShadow");
-    const saved = localStorage.getItem("logoShadowPreset");
-    const raw = (fromQS || saved || "minimal").toLowerCase();
-    const preset = (raw === "presence" || raw === "bold" || raw === "strong") ? "presence" : "minimal";
-    document.body.dataset.logoShadow = preset;
-    if(fromQS) localStorage.setItem("logoShadowPreset", preset);
-  }catch(e){}
-})();
-</script>
-
+<section aria-label="관련 링크" class="rel-links">
+  <h2>관련 링크</h2>
+  <div class="rel-grid">
+    <a href="/" data-cta="rel_home">메인</a>
+    <a href="/#oddsAnalyzerSection" data-cta="rel_odds">배당 구조 분석기</a>
+    <a href="/tool-margin/" data-cta="rel_margin">마진 계산기</a>
+    <a href="/tool-ev/" data-cta="rel_ev">EV 계산기</a>
+    <a href="/tool-odds/" data-cta="rel_odds2">배당↔확률 변환</a>
+    <a href="/#vendorTop" data-cta="rel_vendors">보증·인증 업체</a>
+    <a href="/bonus-checklist/" data-cta="rel_bonus">입플 체크리스트</a>
+    <a href="/landing-a/" data-cta="rel_landing_a">입플·보너스 안내</a>
+  </div>
+</section>
+<style>
+  .rel-links{max-width:1080px;margin:26px auto 34px;padding:14px 14px 16px;border-radius:18px;
+    border:1px solid rgba(255,255,255,.10);background:linear-gradient(180deg,rgba(255,255,255,.05),rgba(255,255,255,.02));
+    box-shadow:0 14px 40px rgba(0,0,0,.35);}
+  .rel-links h2{margin:0 0 10px;font-size:13px;letter-spacing:.02em;color:rgba(245,226,122,.92);font-weight:900;}
+  .rel-grid{display:flex;flex-wrap:wrap;gap:8px;}
+  .rel-grid a{text-decoration:none;color:rgba(255,255,255,.82);font-size:12px;padding:8px 10px;border-radius:999px;
+    border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
+  .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
+</style>
 </body>
 </html>
